--- a/style/style.scss
+++ b/style/style.scss
@@ -191,6 +191,7 @@ footer{
     .right-part{
         width: 50%;
         img{
+            width: 100%;
             float: right;
         }
     }
