--- a/style/style.scss
+++ b/style/style.scss
@@ -311,6 +311,7 @@ footer{
     .right-part{
         width: 40%;
         img{
+            width: 100%;
             float: right;
         }
     }
