--- a/style/style.scss
+++ b/style/style.scss
@@ -310,6 +310,7 @@ footer{
     }
     .right-part{
         width: 40%;
+        padding-left: 20px;
         img{
             width: 100%;
             float: right;
