--- a/style/style.css
+++ b/style/style.css
@@ -402,6 +402,7 @@ footer .copyright .orange {
 
 .about-part-one .right-part {
   width: 40%;
+  padding-left: 20px;
 }
 
 .about-part-one .right-part img {
