--- a/style/style.css
+++ b/style/style.css
@@ -990,6 +990,8 @@ footer .copyright .orange {
   .about-part-one .right-part {
     width: 100%;
     margin-top: 40px;
+    padding-left: 0;
+}
   }
   .about-part-one .right-part img {
     width: 100%;
