--- a/style/style.scss
+++ b/style/style.scss
@@ -787,6 +787,7 @@ footer{
         .right-part{
             width: 100%;
             margin-top: 40px;
+            padding-left: 0;
             img{
                 width:100%;
             }
