--- a/style/style.scss
+++ b/style/style.scss
@@ -24,6 +24,10 @@ body{
     display: none;
 }
 
+.hide-mobile{
+    display: block;
+}
+
 a{
     text-decoration: none;
     cursor: pointer;
@@ -414,9 +418,9 @@ footer{
     }
     .year{
         display: flex;
-        align-items: center;
         .title{
             margin: 0;
+            margin-top: 10px;
             margin-right: 20px;
         }
         .light-grey{
@@ -667,10 +671,14 @@ footer{
 
 //RESPONSIVE
 
-@media only screen and (max-width: 1000px) {
+@media only screen and (max-width: 1024px) {
 
     .hide-pc{
         display: block;
+    }
+
+    .hide-mobile{
+        display: none;
     }
 
     header{
